CreateFreebaseLinks jvmArgs